# qml-hardware-survey

./: .gitignore  LICENSE  README.md  ROADMAP.md  epistemological_style_guide.md  pyproject.toml
.github/workflows/: ci.yml
datasets/qml-hardware-survey/: README.md
docs/integration-notes/: README.md  aws-setup.md  local-sims.md  sv1.md
results/: SUMMARY.md
results/phase0/: 2026-04-29T19-26-15+00-00_default.qubit_parity.json  2026-04-29T19-26-16+00-00_default.qubit_moons.json  2026-04-29T19-26-35+00-00_default.qubit_mnist_pca.json  2026-06-20T05-11-04+00-00_default.qubit_parity.json  2026-06-20T05-11-05+00-00_default.qubit_moons.json  2026-06-20T05-11-17+00-00_default.qubit_mnist_pca.json
results/phase1/cross_sim/: 2026-04-29T19-41-48+00-00_default.qubit_parity.json  2026-04-29T19-41-49+00-00_default.qubit_moons.json  2026-04-29T19-42-02+00-00_default.qubit_mnist_pca.json  2026-04-29T19-42-26+00-00_lightning.qubit_parity.json  2026-04-29T19-42-54+00-00_lightning.qubit_moons.json  2026-04-29T19-43-40+00-00_lightning.qubit_mnist_pca.json  2026-04-29T20-45-13+00-00_default.qubit_parity.json  2026-04-29T20-45-14+00-00_default.qubit_moons.json  2026-04-29T20-45-26+00-00_default.qubit_mnist_pca.json  2026-04-29T20-46-01+00-00_lightning.qubit_parity.json  (+8 more)
scripts/: build_hf_dataset.py  doctor.py  rollup.py  run_phase0.py  run_phase1_matrix.py  run_phase1_shot_noise.py  run_phase1_trainability.py
src/qmlsurvey/: __init__.py  backends.py  baselines.py  catalog.py  model.py  runner.py
tests/: test_determinism.py  test_runrecord_schema.py  test_smoke.py
(+30 files in other folders)
