[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qmlsurvey"
version = "0.1.0"
description = "Systematic survey of interfacing small ML models with real quantum backends."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "bshepp" }]
dependencies = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "torch>=2.1",
    "pennylane>=0.35",
    "pennylane-lightning>=0.35",
    "click>=8.1",
]

[project.optional-dependencies]
braket = [
    "amazon-braket-sdk>=1.80",
    "amazon-braket-pennylane-plugin>=1.30",
    "boto3>=1.34",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
qmlsurvey = "qmlsurvey.runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
